# xiaozhi-esp32

main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  mqtt_client_custom.cc  mqtt_client_custom.h
main/audio_codecs/: audio_codec.cc  box_audio_codec.cc  box_audio_codec.h
main/boards/bread-compact-wifi/: compact_wifi_board.cc  config.h
main/boards/bread-compact-wifi-lcd/: compact_wifi_board_lcd.cc  config.h
main/boards/movecall-moji-esp32s3/: config.h  movecall_moji_esp32s3.cc
main/boards/xy-devkit-v1/: config.h  config.json  xy-devkit-v1.cc
main/iot/: thing_manager.cc
main/iot/things/: external_mqtt_thing.cc  external_mqtt_thing.h  lamp.cc
main/led/: circular_strip.cc  circular_strip.h
main/test/: CMakeLists.txt  test_custom_mqtt_client.cpp  test_external_mqtt_thing.cpp
main/xy_iot_mqtt/: CMakeLists.txt  xy_iot_mqtt_client.cc  xy_iot_mqtt_client.h
